# python-sql-parser

./: .gitignore  generate_grammar.py  setup.cfg  setup.py
src/sqlparser/: __init__.py  internalparser.py  parsing.py
