[metadata]
name = pythonsqlparser
version = 0.1.3
description = This repository provides a Python SQL string parser.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pysparkling/python-sql-parser/
author = Erwan Guyomarc'h
author_email = tools4origins@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
install_requires =
    antlr4-python3-runtime>=4.10
python_requires = >=3.6
packages = find:
package_dir=
    =src
include_package_data = True

[options.packages.find]
where=src

[options.extras_require]
test =
    pylint~=2.5.0
    pytest

